tests/paczka1/fuzzy1/69218136.err
Error in line 8: Sm5 A624 77,3
Error in line 11: uwgwMDnN A140 63,7
Error in line 13: uwgwMDnN A624 64,9
Error in line 16: uwgwMDnN A140 68,9
Error in line 28: JWgwY2 A689 29,1
Error in line 31: JWgwY2 A140 59,0
Error in line 32: JWgwY2 A689 85,9
